# fasyslog

./: Cargo.toml  README.md
.github/: FUNDING.yml  semantic.yml
.github/workflows/: ci.yml
examples/: broadcast_sender.rs  native_tls_sender.rs  tcp_sender.rs  tls_sender.rs  udp_sender.rs  unix_sender.rs
examples/shared/: mod.rs
src/: facility.rs  format.rs  internal.rs  lib.rs  severity.rs  structured_data.rs
src/sender/: internal.rs  mod.rs  native_tls.rs  tcp.rs  udp.rs  unix.rs
