# Copyright 2024 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "fasyslog"
version = "0.1.0"

categories = ["development-tools::debugging"]
documentation = "https://docs.rs/fasyslog"
edition = "2021"
keywords = ["syslog", "logs", "logging"]
license = "Apache-2.0"
repository = "https://github.com/fast/fasyslog"
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
jiff = { version = "0.1.14" }

[target.'cfg(unix)'.dependencies]
cfg-if = { version = "1.0.0" }
nix = { version = "0.29.0", features = ["hostname"] }

[target.'cfg(windows)'.dependencies]
windows-targets = { version = "0.52.6" }

[dev-dependencies]
names = { version = "0.14.0", default-features = false }
